# L4D2-AI-Architect

./: .env.example  .flake8  .gitignore  AGENTS.md  LICENSE  Makefile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  deploy_to_vultr.sh  l4d2_ai.py  preflight_check.py  pyproject.toml  requirements.txt  run_credit_burn.sh  run_scraping.sh  run_training.sh  run_vultr_synthetic.sh  run_vultr_training.sh  setup.py  setup.sh  validate_scripts.py  visual_demo.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  train.yml
configs/: continuous_training_config.yaml  director_config.yaml  model_server.yaml  training_versions.json  unsloth_config.yaml  unsloth_config_a100.yaml  unsloth_config_a100_turbo.yaml  unsloth_config_codellama.yaml  unsloth_config_codellama_fast.yaml  unsloth_config_codellama_turbo.yaml  unsloth_config_gh200.yaml  unsloth_config_llama3.yaml  unsloth_config_qwen.yaml  unsloth_config_qwen_fast.yaml  unsloth_config_qwen_turbo.yaml  unsloth_config_v12.yaml  unsloth_config_v13.yaml  unsloth_config_v14.yaml  unsloth_config_v15.yaml  unsloth_config_v15_fast.yaml
data/: model_comparison_report.txt  security_test_prompts.txt  training_report.html
data/automated_test_openai/: bile_tracker.sp  charger_carry.sp  hunter_pounce.sp  kill_tracker.sp  no_ff_panic.sp  random_timer.sp  saferoom_heal.sp  smoker_grab.sp  speed_boost.sp  tank_announce.sp
data/automated_test_qwen/: bile_tracker.sp  charger_carry.sp  hunter_pounce.sp  kill_tracker.sp  no_ff_panic.sp  random_timer.sp  saferoom_heal.sp  smoker_grab.sp  speed_boost.sp  tank_announce.sp
data/continuous_training/: CHANGELOG.md  config_v1.0.1.yaml
data/corrected_plugins/: AutoRevive.sp  AutoRevive_Improved.sp  COMPREHENSIVE_ANALYSIS.md  FINAL_AutoRevive.sp  FINAL_NoFriendlyFireDuringPanic.sp  FINAL_SUMMARY.md  FINAL_SpeedBoostOnKill.sp  FINAL_WitchSpawner.sp  FINAL_ZombieKillTracker.sp  NoFriendlyFireDuringPanic.sp  NoFriendlyFireDuringPanic_Improved.sp  NoFriendlyFireDuringPanic_v2.sp  README.md  SpeedBoostOnKill.sp  SpeedBoostOnKill_Improved.sp  SpeedBoostOnKill_v2.sp  WitchSpawner.sp  WitchSpawner_Improved.sp  ZombieKillTracker.sp  ZombieKillTracker_Improved.sp
data/embeddings/: combined.npy  prompts.npy  responses.npy
data/generated_test/: GPT_KillTracker.sp  GPT_NoFF.sp  GPT_SpeedBoost.sp  TestKillTracker.sp  TestSaferoomHeal.sp  TestSpeedBoost.sp
data/metrics/: performance.db
data/prompts/: v3_augmentation_prompts.txt
data/test_samples/: antipattern_test.sp
data/test_validation/: test_hallucinated.sp  test_tank.sp
data/v3_generated/: ISSUE_REPORT.md  generated_001.sp  generated_002.sp  generated_003.sp  generated_004.sp  generated_005.sp  generated_006.sp  generated_007.sp  generated_008.sp  generated_009.sp  generated_010.sp  generated_011.sp  generated_012.sp  generated_013.sp  generated_014.sp  generated_015.sp  generated_016.sp  generated_017.sp  generated_018.sp  generated_019.sp  generated_020.sp  generated_021.sp  generated_022.sp  generated_023.sp  generated_024.sp
deployment/: MANIFEST.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DIGITALOCEAN_L4D2_QUICKSTART.md  DIGITALOCEAN_SETUP.md  DIRECTOR_GUIDE.md  EVALUATION_AND_USAGE_GUIDE.md  EVALUATION_GUIDE.md  EVALUATION_REPORT.md  FINAL_MODEL_COMPARISON.md  FINE_TUNING_FIX.md  L4D2_SERVER_SETUP.md  L4D2_TRAINING_ARCHITECTURE.md  MODEL_CATALOG.md  MODEL_LEVERAGE_STRATEGY.md  MODEL_USAGE_GUIDE.md  NEXT_STEPS_ACTION_PLAN.md  OPENAI_EVALUATION_SUMMARY.md  PROJECT_STATISTICS.md  PROJECT_STATUS.md  QUALITY_ANALYSIS_FINAL.md  QUICK_REFERENCE.md  RL_TRAINING_ROADMAP.md  RUNPOD_TRAINING_GUIDE.md  SECURITY_PATTERNS.md  SECURITY_THREAT_MODEL.md  TRAINING_GUIDE.md  VULTR_A100_TRAINING.md  VULTR_CREDITS_PLAN.md  VULTR_CREDIT_BURN_COMMANDS.md  VULTR_DEPLOYMENT.md  VULTR_TRAINING_GUIDE.md  codebase_overview.md  server_setup_guide.md  server_strategy.md
docs/archive/: GH200_DEPLOYMENT.md  TRAINING_STATUS_REPORT.md  V2_MODEL_VALIDATION.md  V7_TRAINING_NOTES.md  VULTR_V11_TRAINING_GUIDE.md
results/: full_comparison.md  orchestrator_v13.md  quick_test.md
scripts/: l4d2_ai_controller.py  l4d2_multi_personality_controller.py
scripts/bugfixes/: fix_fine_tuning.py  upload_fixed_training.sh
scripts/deploy/: deploy_digitalocean.sh
scripts/director/: __init__.py  bridge.py  director.py  policy.py  rcon_director.py  simulation.py  test_director.py  train_director_rl.py
scripts/evaluation/: __init__.py  automated_test.py  benchmark_suite.py  compare_all_models.py  compare_models.py  detect_antipatterns.py  evaluate_model.py  evaluate_models.py  model_dashboard.py  openai_evals.py  performance_tracker.py  run_lora_evaluation.py  run_tinyllama_eval.py  test_qwen_model.py  test_tinyllama.py  validate_generated_code.py
scripts/inference/: __init__.py  code_explainer.py  copilot_cli.py  copilot_server.py  copilot_server_openai.py  generate_test_plugins.py  l4d2_codegen.py  l4d2_sdk.py  l4d2_sdk_examples.py  model_server.py  plugin_wizard.py  prompt_templates.py  rag_copilot.py  test_code_explainer.py  test_lora.py  web_ui.py
scripts/launchers/: run_ai_bot.sh  run_ai_director.sh  start_web_ui.sh
scripts/rl_training/: enhanced_mock_env.py  mnemosyne_env.py  quick_ppo_test.py  test_enhanced_env.py  train_all_personalities.py  train_ppo.py
scripts/runpod/: deploy_and_train.sh
scripts/scrapers/: scrape_github_plugins.py  scrape_valve_wiki.py
scripts/training/: augment_dataset.py  check_finetune_status.py  continuous_training.py  create_v11_dataset.py  create_v12_dataset.py  dataset_analyzer.py  export_gguf_cpu.py  export_model.py  generate_embeddings.py  generate_synthetic_data.py  generate_v12_synthetic.py  generate_v13_massive.py  generate_vscript_dataset.py  hyperparam_search.py  monitor_finetune.py  monitor_v9_completion.py  post_training.py  prepare_dataset.py  (+9 more)
tests/: conftest.py  test_all.py  test_director.py  test_integration.py  test_rl_training.py
(+37 files in other folders)
